--- a/index.html
+++ b/index.html
@@ -1,26 +1,42 @@
 <!doctype html>
-<html>
+<html ng-app="99App">
 
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.10/angular.min.js"></script>
+    <script src="https://code.createjs.com/easeljs-0.8.0.min.js"></script>
+    <script src="https://code.createjs.com/preloadjs-0.6.0.min.js"></script>
+    <style type="text/css">
+    </style>
 </head>
 
 <body>
-    <textarea rows="30" cols="50" id="server_update"></textarea>
+
+    <div>
+        <canvas id="game_canvas" width="624" height="320"></canvas>
+    </div>
+
+
+    <textarea rows="10" cols="40" id="server_update"></textarea>
+
+
+
+
     <script type="text/javascript" src="http://cdn.socket.io/socket.io-1.2.0.js"></script>
     <script type="text/javascript" src="http://code.jquery.com/jquery-1.11.1.js"></script>
+    <script type="text/javascript" src="js/app.js"></script>
     <script type="text/javascript">
-    var socket = io();
-    
-    socket.on('server_update', function(msg) {
-        var val = $('#server_update').val();
-        $('#server_update').val(val+msg);
-    });
+    // var socket = io();
 
-    socket.on('game_state', function(msg) {
-        var val = $('#server_update').val();
-        $('#server_update').val(val+msg);
-    })
+    // socket.on('server_update', function(msg) {
+    //     var val = $('#server_update').val();
+    //     $('#server_update').val(val+msg);
+    // });
+
+    // socket.on('game_state', function(msg) {
+    //     var val = $('#server_update').val();
+    //     $('#server_update').val(val+msg);
+    // });
     </script>
 </body>
 
